[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloomfilter = "2.0.0"
anyhow = "*"
tokio = { version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde_derive = "1.0.228"
structopt = "0.1.7"
byteorder = "1.*"
hex = "0.4.3"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "tokio-rustls"] }
easybreach_bloom = {path = "../easybreach_bloom"}
bincode = { version = "1.3.3"}