[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloomfilter = "3.0.1"
anyhow = "*"
tokio = { version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde_derive = "1.0.228"
structopt = "0.3.26"
byteorder = "1.5.0"
hex = "0.4.3"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "tokio-rustls"] }
easybreach_bloom = {path = "../easybreach_bloom"}
bincode = { version = "2.0.1"}