[package]
name = "easybreach"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
axum = "0.6.*"
tokio = { version = "1.*", features = ["full"]}
serde = "1.*"
serde_json = "1.*"
serde_derive = "1.*"
tracing = "0.1.*"
sha-1 = "0.*"
base16ct = { version = "0.2", features = ["alloc", "std"]}
structopt = "0.*"
easybreach_bloom = {path = "../easybreach_bloom"}
tower-http = { version = "0.3.0", features = ["cors"] }
http = "1.0.0"
