[package]
name = "easybreach"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
axum = "0.8.6"
tokio = { version = "1.27.0", features = ["full"]}
serde = "1.*"
serde_json = "1.0.145"
serde_derive = "1.*"
tracing = "0.1.41"
sha-1 = "0.10.1"
base16ct = { version = "0.3.0", features = ["alloc", "std"]}
structopt = "0.0.5"
easybreach_bloom = {path = "../easybreach_bloom"}
tower-http = { version = "0.3.5", features = ["cors"] }
http = "1.3.1"
